@@ -37,6 +37,8 @@
     * Net::SSLeay#get_SSL_CTX returns a new object.
     * Remove Net::SSLeay#get_tlsext_status_type method.
     * Remove Net::SSLeay#pending method.
+    * Remove Net::SSLeay#peek method.
+    * Remove Net::SSLeay#set_tlsext_status_type method.
   [Bug Fix]
     * Fix bugs of Net::SSLeay#get0_alpn_selected method.
     * Fix bugs of Net::SSLeay#get0_next_proto_negotiated method.
